Fixed inconsistency in button colors, text formatting. Navbar overflow: hidden removed

--- a/app/assets/stylesheets/components/_rental_card.scss
+++ b/app/assets/stylesheets/components/_rental_card.scss
@@ -52,3 +52,9 @@
 .links > a.cancel:hover {
   background-color: #945509;
 }
+
+ul.date {
+  list-style: none;
+  padding-left: 11px;
+}
+
